--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
+  
 
 dependencies:
   flutter:
@@ -29,7 +30,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   timer_count_down: ^1.0.4+1
-  audioplayer: ^0.8.1
+  flutter_bloc: ^6.1.1
+  convex_bottom_bar: ^2.6.0
+  freezed: ^0.12.7
+
 
 dev_dependencies:
   flutter_test:
@@ -47,8 +51,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-assets:
-   - assets/
+  assets:
+   - assets/images
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
