--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,15 @@ dependencies:
   timer_count_down: ^1.0.4+1
   flutter_bloc: ^6.1.1
   convex_bottom_bar: ^2.6.0
-  freezed: ^0.12.7
+  freezed_annotation: ^0.14.0 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^1.0.0
-
+  build_runner: ^1.12.2 
+  freezed: ^0.14.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
