--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ version: 1.0.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
-  
 
 dependencies:
   flutter:
@@ -29,18 +28,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  timer_count_down: ^1.0.4+1
+  provider: ^4.3.2+3
+  flip_card: ^0.4.4
   flutter_bloc: ^6.1.1
-  convex_bottom_bar: ^2.6.0
-  freezed_annotation: ^0.14.0 
+  freezed: ^0.12.7
+  freezed_annotation: ^0.12.0
+  get_it: ^6.0.0
+  firebase: ^9.0.0
+  http: ^0.13.0
+  stacked_card_carousel: ^0.0.2+1
+  circular_countdown_timer: ^0.2.0
+  numberpicker: ^2.1.1
+  animations: ^2.0.0
+  convex_bottom_bar: ^3.0.0
+  
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^1.0.0
-  build_runner: ^1.12.2 
-  freezed: ^0.14.0
+  build_runner: ^1.11.1
+
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -54,7 +62,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/logotabata.png
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
