--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   provider: ^4.3.2+3
   flip_card: ^0.4.4
   flutter_bloc: ^6.1.1
-  freezed: ^0.12.7
-  freezed_annotation: ^0.12.0
+  freezed: 
+  freezed_annotation: 
   get_it: ^6.0.0
   firebase: ^9.0.0
   http: ^0.13.0
@@ -41,13 +41,14 @@ dependencies:
   numberpicker: ^2.1.1
   animations: ^2.0.0
   convex_bottom_bar: ^3.0.0
-  
+  rive: 
+  page_transition: "^2.0.2"
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^1.11.1
+  build_runner: 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
