--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,19 @@ dependencies:
   page_transition: "^2.0.2"
 
 
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: 
+  flutter_launcher_icons: ^0.9.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/workout.png"
+  adaptive_icon_background: "assets/images/workout.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
