--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,8 @@ dependencies:
   stacked_card_carousel: ^0.0.2+1
   circular_countdown_timer: ^0.2.0
   numberpicker: ^2.1.1
-  animations: ^2.0.0
-  convex_bottom_bar: ^3.0.0
-  rive: 
-  page_transition: "^2.0.2"
+  rive: ^0.7.11
+  page_transition: 
 
 
 
@@ -51,7 +49,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   build_runner: 
-  flutter_launcher_icons: ^0.9.0
+  flutter_launcher_icons: 
 
 flutter_icons:
   android: "launcher_icon"
