--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,8 @@ dependencies:
   numberpicker: ^2.1.1
   rive: ^0.7.11
   page_transition: 
-
-
+  carousel_slider: ^3.0.0
+  hive: ^2.0.4
 
 
 dev_dependencies:
