--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,24 +31,28 @@ dependencies:
   provider: ^4.3.2+3
   flip_card: ^0.4.4
   flutter_bloc: ^6.1.1
-  freezed: 
-  freezed_annotation: 
+  freezed: ^0.12.7
+  freezed_annotation: ^0.12.0
   get_it: ^6.0.0
   firebase: ^9.0.0
   http: ^0.13.0
   stacked_card_carousel: ^0.0.2+1
   circular_countdown_timer: ^0.2.0
   numberpicker: ^2.1.1
-  rive: ^0.7.11
   page_transition: 
   carousel_slider: ^3.0.0
   hive: ^2.0.4
+  path_provider: ^1.6.27
 
+  persistance_service:  
+    path: packages/persistance_service
+  historical_repository:  
+    path: packages/historical_repository
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 
+  build_runner: ^1.11.1
   flutter_launcher_icons: 
 
 flutter_icons:
