aniadida primera version con sonidos para la app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,14 +46,18 @@ dependencies:
   intl: ^0.17.0
   nested: ^1.0.0
   font_awesome_flutter: ^9.1.0
+  wakelock: ^0.5.2
+  assets_audio_player: ^1.2.7
+
 
   persistance_service:  
     path: packages/persistance_service
   historical_repository:  
     path: packages/historical_repository
+  sound_provider:
+    path: packages/sound_provider
   tabata_ui:
     path: packages/tabata_ui
-  wakelock: ^0.5.2
 
 dev_dependencies:
   flutter_test:
@@ -81,7 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/sounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
