--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,53 +18,46 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 2.0.0+6
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.3.2"
 
 dependencies:
+  angles: ^2.1.1
+  assets_audio_player: ^1.2.7
+  carousel_slider: ^3.0.0
+  circular_countdown_timer: ^0.2.0
+  cupertino_icons: ^0.1.3
+  firebase: ^9.0.0
+  flip_card: ^0.4.4
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  provider: ^4.3.2+3
-  flip_card: ^0.4.4
-  flutter_bloc: ^6.1.1
-  freezed: ^0.12.7
-  freezed_annotation: ^0.12.0
-  get_it: ^6.0.0
-  firebase: ^9.0.0
-  http: ^0.13.0
-  stacked_card_carousel: ^0.0.2+1
-  circular_countdown_timer: ^0.2.0
-  numberpicker: ^2.1.1
-  page_transition: 
-  carousel_slider: ^3.0.0
-  hive: ^2.0.4
-  path_provider: ^1.6.27
+  flutter_bloc: ^8.1.1
+  font_awesome_flutter: ^9.1.0
+  freezed: ^2.1.1
+  freezed_annotation: ^2.1.0
+  get_it: ^7.2.0
+  historical_repository:
+    path: packages/historical_repository
+  hive: ^2.2.3
+  http: ^0.13.5
   intl: ^0.17.0
   nested: ^1.0.0
-  font_awesome_flutter: ^9.1.0
-  wakelock: ^0.6.2
-  assets_audio_player: ^1.2.7
-
-
-  persistance_service:  
+  numberpicker: ^2.1.1
+  page_transition: null
+  path_provider: ^1.6.27
+  persistance_service:
     path: packages/persistance_service
-  historical_repository:  
-    path: packages/historical_repository
   sound_provider:
     path: packages/sound_provider
+  stacked_card_carousel: ^0.0.2+1
   tabata_ui:
     path: packages/tabata_ui
-  angles: ^2.1.0
+  wakelock: ^0.6.2
 
 dev_dependencies:
+  build_runner: ^2.2.1
+  flutter_launcher_icons: null
   flutter_test:
     sdk: flutter
-  build_runner: ^1.11.1
-  flutter_launcher_icons: 
 
 flutter_icons:
   android: "launcher_icon"
@@ -74,7 +67,6 @@ flutter_icons:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -87,13 +79,10 @@ flutter:
   assets:
     - assets/images/
     - assets/sounds/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
