--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -35,6 +35,7 @@ dependencies:
   freezed: ^2.1.1
   freezed_annotation: ^2.1.0
   get_it: ^7.2.0
+  google_fonts: ^3.0.1
   historical_repository:
     path: packages/historical_repository
   hive: ^2.2.3
@@ -43,9 +44,10 @@ dependencies:
   nested: ^1.0.0
   numberpicker: ^2.1.1
   page_transition: null
-  path_provider: ^1.6.27
+  path_provider: ^2.0.11
   persistance_service:
     path: packages/persistance_service
+  shimmer: ^2.0.0
   sound_provider:
     path: packages/sound_provider
   stacked_card_carousel: ^0.0.2+1
@@ -69,7 +71,6 @@ flutter_icons:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
