--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,6 @@ dependencies:
   carousel_slider: ^3.0.0
   circular_countdown_timer: ^0.2.0
   cupertino_icons: ^0.1.3
-  firebase: ^9.0.0
   flip_card: ^0.4.4
   flutter:
     sdk: flutter
@@ -54,6 +53,8 @@ dependencies:
   tabata_ui:
     path: packages/tabata_ui
   wakelock: ^0.6.2
+# Firebase
+  firebase_core: ^1.24.0
 
 dev_dependencies:
   build_runner: ^2.2.1
